# DataLens

./: README.md  pyproject.toml
DataLen/comparators/: comparison_result.py
DataLen/components/: __init__.py  abstract_data_investigator.py  bivariate_data_investigator.py  categorical_investigator.py  numerical_investigator.py
DataLen/core/: data_validator.py  visualizer.py
DataLen/investigator/: bivariate_data_investigator.py  categorical_investigator.py  numerical_investigator.py
DataLen/visualization/: base.py  visualizer.py
datalens/: __init__.py
datalens.egg-info/: PKG-INFO  SOURCES.txt
datalens/comparators/: base.py  data_comparator.py
datalens/core/: data_investigator.py
datalens/investigator/: bivariate_data_investigator.py  categorical_investigator.py  numerical_investigator.py
tests/unit/: test_bivariate_data_investigator.py  test_categorical_data_investigator.py  test_comparator.py  test_numerical_data_investigator.py
