[tool.ruff]

line-length = 120

[project]
name = "datalens"
version = "0.1.0"
description = "Advanced Exploratory Data Analysis Toolkit"
authors = [
    {name = "Rahul Agarwal"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

