[tool.ruff]

# Set the maximum line length to 79
line-length = 120
ignore=["PLR0915", "PD011", "RET504", "T201", "N806", "TID252"]


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
select = ["ALL"]

[project]
name = "datalens"
version = "0.1.0"
description = "Advanced Exploratory Data Analysis Toolkit"
authors = [
    {name = "Rahul Agarwal"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

